--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "libraryName": "VcButton",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "docs": "npm run build:docs && npm run version-push",
     "build:docs": "vue-cli-service build",
     "build:lib": "vue-cli-service lint && vue-cli-service build --dest dist --target lib --name index src/index.js",
     "lint": "vue-cli-service lint",
-    "version-push": "node version-push.js && git add version.md && git commit -m \"chore(version): New version\" -uno && ls",
     "open": "dev serve -o docs"
   },
   "files": [
@@ -20,6 +18,8 @@
     "types",
     "screenshot.png"
   ],
+  "github": "https://github.com/mengdu/dove-ui/button",
+  "website": "https://lanyueos.com",
   "homepage": "https://mengdu.github.io/dove-ui/button",
   "repository": {
     "type": "https",
@@ -42,14 +42,15 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "core-js": "^3.3.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "vue": "^2.6.10",
     "vue-dotmd-loader": "^0.2.0",
-    "vue-template-compiler": "^2.6.10",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue-router": "^3.1.5",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
